--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "editor.insertSpaces": false,
-    "editor.detectIndentation": false
+	"editor.insertSpaces": false,
+	"editor.detectIndentation": false,
+	"python.pythonPath": ".venv/bin/python3"
 }
